--- a/new 1.html
+++ b/new 1.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header role="banner">
-        <h1><a href="#"><img src="image/task_1_02_1.png" /></a></h1>
+        <h1><a href="#"><img src="https://ss0.bdstatic.com/5aV1bjqh_Q23odCf/static/superman/img/logo/bd_logo1_31bdc765.png" /></a></h1>
         <nav role="navigation">
             <ul>
                 <li><a href="#" target="_blank">链接一</a></li>
@@ -43,10 +43,10 @@
             <h2>图片</h2>
             <dl>
                 <dt></dt>
-                <dd><span>拥抱大海</span><img src="image/task_1_01.jpg" alt="面向大海" /></dd>
-                <dd><span>拥抱大海</span><img src="image/task_1_01.jpg" alt="面向大海" /></dd>
-                <dd><span>拥抱大海</span><img src="image/task_1_01.jpg" alt="面向大海" /></dd>
-                <dd><span>拥抱大海</span><img src="image/task_1_01.jpg" alt="面向大海" /></dd>
+                <dd><span>food</span><img src="http://cp2.douguo.net/upload/caiku/6/7/7/400_679996295ae8bedb5621b67ddec6b987.jpeg" alt="面向大海" /></dd>
+                <dd><span>food</span><img src="http://cp2.douguo.net/upload/caiku/6/7/7/400_679996295ae8bedb5621b67ddec6b987.jpeg" alt="面向大海" /></dd>
+                <dd><span>food</span><img src="http://cp2.douguo.net/upload/caiku/6/7/7/400_679996295ae8bedb5621b67ddec6b987.jpeg" alt="面向大海" /></dd>
+                <dd><span>food</span><img src="http://cp2.douguo.net/upload/caiku/6/7/7/400_679996295ae8bedb5621b67ddec6b987.jpeg" alt="面向大海" /></dd>
             </dl>
         </article>
         <article>
